--- a/bootstraps/index.html
+++ b/bootstraps/index.html
@@ -185,7 +185,7 @@
 
                 </div>
                 Name: <input type="text" placeholder="enter your name"><br><br> Ph no: <input type="number" placeholder="enter phone number"><br><br>
-                <button>Submit</button>
+                <button id="button1">Submit</button>
 
 
 
